--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <section class="initial section">
             <div class="container">
                 <div class="initial__inner">
-                    <h2 class="initial__title section__title">Выберите исходные пропорции</h2>
+                    <h2 class="initial__title section__title">Пропорции в рецепте</h2>
                     <div class="initial__figures">
                         <div class="initial__figure" data-initial="circle">
                             <div class="initial__circle"></div>
@@ -46,7 +46,7 @@
         <section class="initial section">
             <div class="container">
                 <div class="initial__inner">
-                    <h2 class="initial__title section__title">Выберите желаемые пропорции</h2>
+                    <h2 class="initial__title section__title">Необходимые пропорции</h2>
                     <div class="initial__figures">
                         <div class="initial__figure" data-outcome="circle">
                             <div class="initial__circle"></div>
