--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./reset.css">
     <link rel="stylesheet" href="./style.css">
-    <title>Provance_bakery | onlain calculator</title>
+    <title>Provance_bakery | online calculator</title>
 </head>
 <body>
     <header></header>
